--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -5,13 +5,24 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
+  font-size: 16px;
 }
 
 hr {
   color: rgba(255, 255, 255, 0.6);
   height: 2px;
   width: 80%;
-  margin: 5% 0;
+  margin: 0 auto;
+}
+
+img {
+  -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+  transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+}
+
+img:hover {
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
 }
 
 #home {
@@ -29,11 +40,14 @@ hr {
 }
 
 #home div {
-  /* width: 50%; */
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -47,7 +61,7 @@ hr {
 
 #home div h1 {
   color: white;
-  font-size: 120px;
+  font-size: 5rem;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   -ms-flex-item-align: center;
@@ -55,6 +69,12 @@ hr {
       align-self: center;
   justify-self: flex-end;
   padding-right: 15px;
+}
+
+@media (min-width: 768px) {
+  #home div h1 {
+    font-size: 7.5rem;
+  }
 }
 
 #home div h2 {
@@ -68,6 +88,15 @@ hr {
   font-weight: 300;
 }
 
+@media (min-width: 768px) {
+  #home div {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+  }
+}
+
 .image_head {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -79,16 +108,6 @@ hr {
       -ms-flex-align: center;
           align-items: center;
   margin-top: -200px;
-}
-
-.image_head img {
-  -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-  transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-}
-
-.image_head img:hover {
-  -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
 }
 
 @-webkit-keyframes HeroAnimation {
@@ -214,6 +233,155 @@ hr {
       align-self: flex-end;
 }
 
+#fields {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#fields .comp-desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#fields .components {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+#fields .components img {
+  padding: 15px 15px;
+  -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+  transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+}
+
+#fields .components img:hover {
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+}
+
+#fields .components img.d-end {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+#mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#mobile .column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer {
+  height: 200px;
+  background-color: #ED5565;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer div p {
+  margin: 0 auto;
+  font-family: "Poppins", sans-serif;
+  font-size: 26px;
+  color: #FFF;
+  text-align: center;
+  font-weight: 500;
+  padding-bottom: 1%;
+}
+
+footer a {
+  padding: 8px 20px;
+  background-color: transparent;
+  font-size: 20px;
+  border-radius: 10px;
+  border: 3px solid #FFF;
+  color: #FFF;
+  font-weight: 700;
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+  transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+}
+
+footer a:hover {
+  background: #FFF;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+  -webkit-transform: translateY(-3px);
+  transform: translateY(-3px);
+  color: #ED5565;
+}
+
+footer .mobile-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer .desktop-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (min-width: 768px) {
+  footer .mobile-div {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  footer .desktop-div {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 #demo {
   height: 100vh;
   background-color: #ED5565;
@@ -276,7 +444,7 @@ hr {
 
 #demo div h1 {
   color: white;
-  font-size: 120px;
+  font-size: 5rem;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   -ms-flex-item-align: center;
@@ -284,6 +452,12 @@ hr {
       align-self: center;
   justify-self: flex-end;
   padding-right: 15px;
+}
+
+@media (min-width: 768px) {
+  #demo div h1 {
+    font-size: 7.5rem;
+  }
 }
 
 #demo div h2 {
@@ -376,7 +550,7 @@ hr {
 
 #fournotfound div h1 {
   color: white;
-  font-size: 120px;
+  font-size: 5rem;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   -ms-flex-item-align: center;
@@ -384,6 +558,12 @@ hr {
       align-self: center;
   justify-self: flex-end;
   padding-right: 15px;
+}
+
+@media (min-width: 768px) {
+  #fournotfound div h1 {
+    font-size: 7.5rem;
+  }
 }
 
 #fournotfound div h2 {
