--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -4,58 +4,91 @@
 @import url('https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.css');
 
 $primary: #ED5565;
-$apple: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-$header: 'Poppins', sans-serif;
+$apple: -apple-system,
+BlinkMacSystemFont,
+'Segoe UI',
+Roboto,
+Oxygen,
+Ubuntu,
+Cantarell,
+'Open Sans',
+'Helvetica Neue',
+sans-serif;
+$header: 'Poppins',
+sans-serif;
 
 body {
   margin: 0;
   padding: 0;
   font-family: $apple;
   -webkit-font-smoothing: antialiased;
+  font-size: 16px;
 }
 
 hr {
-  color: rgba(255,255,255,0.6);
+  color: rgba(255, 255, 255, 0.6);
   height: 2px;
   width: 80%;
-  margin: 5% 0;
+  margin: 0 auto;
+
+}
+
+img {
+  transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+
+  &:hover {
+    transform: translateY(-3px);
+  }
 }
 
 #home {
-    height: 560px;
-    background-color: $primary;
+  height: 560px;
+  background-color: $primary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  div {
+    height: 100%;
     display: flex;
-    align-items: center;
+    flex-flow: column;
     justify-content: center;
+    align-items: center;
+    animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+    opacity: 0;
 
-    div {
-        /* width: 50%; */
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
-        opacity: 0;
-
-        h1 {
-            color: rgba(255,255,255,1);
-            font-size: 120px;
-            font-family: $header;
-            font-weight: 600;
-            align-self: center;
-            justify-self: flex-end;
-            padding-right: 15px;
-        }
-
-        h2 {
-            color: rgba(255,255,255,0.8);
-            font-size: 25px;
-            font-family: $header;
-            align-self: center;
-            justify-self: flex-start;
-            font-weight: 300;
-        }
+    h1 {
+      color: rgba(255, 255, 255, 1);
+      font-size: 5rem;
+      font-family: $header;
+      font-weight: 600;
+      align-self: center;
+      justify-self: flex-end;
+      padding-right: 15px;
     }
+
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 7.5rem;
+      }
+    }
+
+    h2 {
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 25px;
+      font-family: $header;
+      align-self: center;
+      justify-self: flex-start;
+      font-weight: 300;
+    }
+
+  }
+
+  @media (min-width: 768px) {
+    div {
+      flex-flow: row;
+    }
+  }
 }
 
 .image_head {
@@ -63,13 +96,6 @@ hr {
   justify-content: center;
   align-items: center;
   margin-top: -200px;
-
-  img {
-    transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-        &:hover {
-          transform: translateY(-3px);
-        }
-  }
 }
 
 @keyframes HeroAnimation {
@@ -92,30 +118,30 @@ hr {
 }
 
 .information {
-    // width: 60%;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
+  // width: 60%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
 
-    h1 {
-      font-family: $header;
-      color: $primary;
-      font-size: 36px;
-      line-height: 1.8;
-      text-align: center;
-      margin-bottom: 5px;
-    }
+  h1 {
+    font-family: $header;
+    color: $primary;
+    font-size: 36px;
+    line-height: 1.8;
+    text-align: center;
+    margin-bottom: 5px;
+  }
 
-    p {
-      margin-top: 0;
-      font-family: $apple;
-      font-weight: 400;
-      line-height: 1.5;
-      text-align: center;
-      width: 80%;
+  p {
+    margin-top: 0;
+    font-family: $apple;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    width: 80%;
 
-    }
+  }
 }
 
 #components {
@@ -129,183 +155,304 @@ hr {
     align-items: center;
   }
 
-    .components {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      img {
-        padding: 15px 15px;
-        transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-        &:hover {
-          transform: translateY(-3px);
-        }
+  .components {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 
-        &.d-end {
-          align-self: flex-end;
-        }
+    img {
+      padding: 15px 15px;
+      transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+
+      &:hover {
+        transform: translateY(-3px);
       }
 
-      
+      &.d-end {
+        align-self: flex-end;
+      }
+    }
+
+
+  }
+}
+#fields {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .comp-desc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .components {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    img {
+      padding: 15px 15px;
+      transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+
+      &:hover {
+        transform: translateY(-3px);
+      }
+
+      &.d-end {
+        align-self: flex-end;
+      }
+    }
+
+
+  }
+}
+
+#mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+footer {
+  height: 200px;
+  background-color: $primary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  div {
+    p {
+      margin: 0 auto;
+      font-family: $header;
+      font-size: 26px;
+      color: #FFF;
+      text-align: center;
+      font-weight: 500;
+      padding-bottom: 1%;
     }
   }
 
-  #demo {
-    height: 100vh;
-    background-color: $primary;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  a {
+    padding: 8px 20px;
+    background-color: transparent;
+    font-size: 20px;
+    border-radius: 10px;
+    border: 3px solid #FFF;
+    color: #FFF;
+    font-weight: 700;
+    outline: none;
+    cursor: pointer;
+    -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+    transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
 
-    div {
-        /* width: 50%; */
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
-        opacity: 0;
-
-        &.container {
-          flex-flow: column;
-
-          h1 {
-            align-self: flex-end;
-          }
-
-          a {
-            align-self: flex-start;
-          }
-
-          .disclaimer {
-            padding-bottom: 5%;
-            width: 60%;
-
-            a {
-              font-weight: 700;
-              border: 0;
-              border-radius: 0;
-              padding: 1%;
-            }
-          }
-        }
-
-        h1 {
-            color: rgba(255,255,255,1);
-            font-size: 120px;
-            font-family: $header;
-            font-weight: 600;
-            align-self: center;
-            justify-self: flex-end;
-            padding-right: 15px;
-        }
-
-        h2 {
-            color: rgba(255,255,255,0.8);
-            font-size: 25px;
-            font-family: $header;
-            align-self: center;
-            justify-self: flex-start;
-            font-weight: 300;
-        }
-
-        a {
-          padding: 8px 20px;
-          background-color: transparent;
-          font-size: 20px;
-          border-radius: 10px;
-          border: 3px solid #FFF;
-          color: #FFF;
-          font-weight: 700;
-          outline: none;
-          cursor: pointer;
-          -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-          transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-
-          &:hover {
-            background: #FFF;
-            -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-            -webkit-transform: translateY(-3px);
-                    transform: translateY(-3px);
-            color: #ED5565;
-        }
-      }
+    &:hover {
+      background: #FFF;
+      -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+      -webkit-transform: translateY(-3px);
+      transform: translateY(-3px);
+      color: #ED5565;
     }
+  }
+
+  .mobile-div {
+    display: flex;
+    justify-content: center;
+  }
+
+  .desktop-div {
+    display: flex;
+    justify-content: center;
+  }
+
+  @media (min-width: 768px) {
+    .mobile-div {
+      justify-content: flex-end;
+    }
+
+    .desktop-div {
+      justify-content: flex-start;
+    }
+  }
+
 }
 
-  #fournotfound {
-    height: 100vh;
-    background-color: $primary;
+#demo {
+  height: 100vh;
+  background-color: $primary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  div {
+    /* width: 50%; */
+    height: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+    opacity: 0;
 
-    div {
-        /* width: 50%; */
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
-        opacity: 0;
+    &.container {
+      flex-flow: column;
 
-        &.container {
-          flex-flow: column;
-          height: 25%;
+      h1 {
+        align-self: flex-end;
+      }
 
-          h1 {
-            align-self: flex-end;
-          }
+      a {
+        align-self: flex-start;
+      }
 
-          a {
-            align-self: flex-start;
-          }
-
-          .disclaimer {
-            padding-bottom: 5%;
-            width: 60%;
-          }
-        }
-
-        h1 {
-            color: rgba(255,255,255,1);
-            font-size: 120px;
-            font-family: $header;
-            font-weight: 600;
-            align-self: center;
-            justify-self: flex-end;
-            padding-right: 15px;
-        }
-
-        h2 {
-            color: rgba(255,255,255,0.8);
-            font-size: 25px;
-            font-family: $header;
-            align-self: center;
-            justify-self: flex-start;
-            font-weight: 300;
-        }
+      .disclaimer {
+        padding-bottom: 5%;
+        width: 60%;
 
         a {
-          padding: 8px 20px;
-          background-color: transparent;
-          font-size: 20px;
-          border-radius: 10px;
-          border: 3px solid #FFF;
-          color: #FFF;
           font-weight: 700;
-          outline: none;
-          cursor: pointer;
-          -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-          transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
-
-          &:hover {
-            background: #FFF;
-            -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-            -webkit-transform: translateY(-3px);
-                    transform: translateY(-3px);
-            color: #ED5565;
+          border: 0;
+          border-radius: 0;
+          padding: 1%;
         }
       }
     }
+
+    h1 {
+      color: rgba(255, 255, 255, 1);
+      font-size: 5rem;
+      font-family: $header;
+      font-weight: 600;
+      align-self: center;
+      justify-self: flex-end;
+      padding-right: 15px;
+    }
+
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 7.5rem;
+      }
+    }
+
+    h2 {
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 25px;
+      font-family: $header;
+      align-self: center;
+      justify-self: flex-start;
+      font-weight: 300;
+    }
+
+    a {
+      padding: 8px 20px;
+      background-color: transparent;
+      font-size: 20px;
+      border-radius: 10px;
+      border: 3px solid #FFF;
+      color: #FFF;
+      font-weight: 700;
+      outline: none;
+      cursor: pointer;
+      -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+      transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+
+      &:hover {
+        background: #FFF;
+        -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+        -webkit-transform: translateY(-3px);
+        transform: translateY(-3px);
+        color: #ED5565;
+      }
+    }
+  }
+}
+
+#fournotfound {
+  height: 100vh;
+  background-color: $primary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  div {
+    /* width: 50%; */
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+    opacity: 0;
+
+    &.container {
+      flex-flow: column;
+      height: 25%;
+
+      h1 {
+        align-self: flex-end;
+      }
+
+      a {
+        align-self: flex-start;
+      }
+
+      .disclaimer {
+        padding-bottom: 5%;
+        width: 60%;
+      }
+    }
+
+    h1 {
+      color: rgba(255, 255, 255, 1);
+      font-size: 5rem;
+      font-family: $header;
+      font-weight: 600;
+      align-self: center;
+      justify-self: flex-end;
+      padding-right: 15px;
+    }
+
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 7.5rem;
+      }
+    }
+
+    h2 {
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 25px;
+      font-family: $header;
+      align-self: center;
+      justify-self: flex-start;
+      font-weight: 300;
+    }
+
+    a {
+      padding: 8px 20px;
+      background-color: transparent;
+      font-size: 20px;
+      border-radius: 10px;
+      border: 3px solid #FFF;
+      color: #FFF;
+      font-weight: 700;
+      outline: none;
+      cursor: pointer;
+      -webkit-transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+      transition: 1s cubic-bezier(0.02, 0.8, 0.2, 1);
+
+      &:hover {
+        background: #FFF;
+        -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+        -webkit-transform: translateY(-3px);
+        transform: translateY(-3px);
+        color: #ED5565;
+      }
+    }
+  }
 }
